testsuite/tests/typecheck/should_fail/tcfail122.stderr

tcfail122.hs:8:9: error:
    • Couldn't match kind ‘*’ with ‘* -> *’
      When matching the kind of ‘a’
    • In the expression:
          undefined :: forall (c :: (* -> *) -> *) (d :: * -> *). c d
      In the expression:
        [undefined :: forall a b. a b,
         undefined :: forall (c :: (* -> *) -> *) (d :: * -> *). c d]
      In an equation for ‘foo’:
          foo
            = [undefined :: forall a b. a b,
               undefined :: forall (c :: (* -> *) -> *) (d :: * -> *). c d]
    • Relevant bindings include
        foo :: [a b] (bound at tcfail122.hs:7:1)
